--- a/modul-5/css/about.css
+++ b/modul-5/css/about.css
@@ -15,7 +15,9 @@
 
  }
 
-
+a{   
+     text-decoration: none;
+}
 
 .wrapper{
  
@@ -41,9 +43,7 @@ nav a:hover{
     color:black;
 }
 
-a{   
-     text-decoration: none;
-}
+
 
 .border-corner a{
     color:black;
@@ -72,13 +72,13 @@ main{
   margin-top:40px;
 }
 nav li{
-      float:left;
-      margin-left:40px;
-
-      padding-left:10px;
+      
+      margin-left:2em;
+      margin-top:2em;
+     
       height:90px;
       width:90px;
-      padding-top:10px;
+      
       color:white;
       font-family:'Pathway Gothic One', sans-serif;
       font-size:28px;
@@ -86,32 +86,30 @@ nav li{
 
 
 
+
 .logo{
-  
-     position:relative;
- 
-     right:24px;
-     bottom:70px;
-}
+    position:relative;
+    right:.3em;}
 
 .list li{
      clear:both;
      color:black;
      padding-top:10px;
-  
+     margin-top:20px;
      font-size:12px;
      position:relative;
-     right:50px;
-     bottom:5px;
-     position:relative;
+     right:40px;
+     bottom:25px;
+     
      z-index:2;
      text-align:center;
-     height:18px;
+     height:8px;
      width:35px;
      font-size: 20px;
      font-family:'Pathway Gothic One', sans-serif;
      text-align: center;
 }
+
 
 nav li:hover{
     color:black;
@@ -181,8 +179,8 @@ main h2{
 
 
 .img1{
-        width:50%;
-        float:left;
+        width:100%;
+        display:inline;
         margin-right:15px;
         margin-top:15px;
         margin-bottom: 5px;
@@ -211,13 +209,6 @@ main h2{
      vertical-align: text-bottom;   
 }
 
-.flex-with-circle div{
-  flex:1;
-}
-.flex-with-circle{
-  display:flex;
-  flex-direction: row;
-}
 
 
 hr{
@@ -226,31 +217,10 @@ hr{
 }
 
 
-
-
-
-.flex-with-border{
-  display:flex;
-  flex-direction: row;
-}
-
-
-
 .flex-with-arrow{
-  display:flex;
-  flex-direction: row;
-  justify-content: space-between;
+  margin-top:20px;
 }
 
-
-.flex-with-arrow div{
-  flex:4;
-}
-
-.flex-with-arrow div:nth-child(3){
-  flex:2;
-  margin-left:90px;
-}
 
 .title-aticle{
       margin-bottom:10px;
@@ -321,7 +291,7 @@ li{
    -moz-border-radius: 5px;
    position: relative;
    padding: 15px;
-   width: 120px;
+   width: 150px;
    text-align: left;
    margin-bottom: 20px;
    margin-top:20px;
@@ -349,13 +319,14 @@ li{
     margin-left:30px;
 }
 
-
+.footer-small{
+  padding-right:25em;
+}
 footer a{
   color:grey;
 }
 footer{
-    display:flex;
-   flex-direction:row;
+    
 
     padding-bottom:50px;
     padding-top:50px;
@@ -376,9 +347,6 @@ footer a:hover{
   color:white;
  }
 
-footer ul{
-  flex:1;
-}
 
 
 
@@ -399,6 +367,7 @@ footer ul{
     width: 24px;
     height: 24px;
     vertical-align: middle;
+
     
 }
 
@@ -434,10 +403,10 @@ footer ul{
 
  .icons{
     display:flex;
-    margin-right:350px; 
+ 
+    margin-right:4em;
    
-   
-    transform:translate(50%, 50%);
+    transform:translate(35%, 50%);
     
  
  }    
@@ -482,3 +451,17 @@ footer ul{
     line-height:2;
 
 }
+
+
+
+
+@media screen and (max-width:768px) and (min-width: 481px){
+
+  
+  .logo{top:-12em; left:8em;}
+
+  nav ul{margin-top:9em; padding-left:6em;}
+  nav li{height:0;}
+ 
+}
+
