--- a/modul-5/css/tours.css
+++ b/modul-5/css/tours.css
@@ -48,10 +48,10 @@ a{
 }
 
 nav li{
-      float:left;
-      margin-left:40px;
-      margin-top:10px;
-      padding-left:10px;
+      
+      margin-left:2em;
+      margin-top:2em;
+     
       height:90px;
       width:90px;
       
@@ -62,25 +62,21 @@ nav li{
 
 
 
-
 .logo{
-  
-     position:relative;
- 
-     right:24px;
-     bottom:70px;
-}
+    position:relative;
+    right:.3em;
+     }
 
 .list li{
      clear:both;
      color:black;
      padding-top:10px;
-  
+     margin-top:20px;
      font-size:12px;
      position:relative;
-     right:50px;
-     bottom:15px;
-     position:relative;
+     right:40px;
+     bottom:25px;
+     
      z-index:2;
      text-align:center;
      height:8px;
@@ -151,8 +147,7 @@ main{
 
 
 
-
-.photo-trip{
+/*.photo-trip{
        flex:1; 
        margin:10px;
        margin-top:20px;
@@ -170,18 +165,27 @@ main{
    
 
 }
+*/
 
+aside h2{
+  padding-bottom:20px;
+}
+
+.photo-trip img{
+  width:100%;
+}
 .aside1 h3{
-    width:140px;
-    padding-bottom:5px;
-    line-height:2;
-    padding-left:5px;
+    
     color:#5ecaf2;
+
 }
 
-.aside1 h3:hover{
-     font-size:19px;
+.about-trip{
+  margin-bottom:60px;
 }
+/*.aside1 h3:hover{
+     font-size:19px;
+}*/
 
 
 .aside2 h3{
@@ -313,7 +317,7 @@ aside{
 .home-buttom{
   position:fixed;
   margin-left:900px;
-  margin-top:400px;
+  margin-top:900px;
  
 }
 .but-home{
@@ -333,8 +337,7 @@ footer a{
   color:grey;
 }
 footer{
-    display:flex;
-    flex-direction:row;
+   
 
     padding-bottom:50px;
     padding-top:50px;
@@ -355,9 +358,7 @@ footer a:hover{
   color:white;
  }
 
-footer ul{
-  flex:1;
-}
+
 
 
 
@@ -366,14 +367,17 @@ footer ul{
 .footer-small{
     background:none;
     color:white;
-   
+  
     padding-top:5px;
 
 }
 
 
-
+.icons{
+  margin-right:60px;
+}
 .icons a {
+
     display: inline-block;
     width: 24px;
     height: 24px;
@@ -442,3 +446,22 @@ footer ul{
   color:grey;
   text-align:center;
 }
+
+
+@media screen and (max-width:768px) and (min-width: 481px){
+
+  /*.wrapper{width:100%;}*/
+  .logo{top:-12em; left:16em;}
+
+  nav ul{margin-top:9em; padding-left:14em;}
+  nav li{height:0;}
+  footer{padding-right:3em; padding-left:3em;}  
+   
+   .flex-img img:nth-child(7){display:none;}
+   .signature{padding-top:1em; padding-left:8em;}
+   
+}
+
+
+.photo-trip img{margin-bottom:2em;}
+
